Reno/Terraform/compute/eks/examples/new-poc/K8s/apache-app-svc.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: apache-app
  namespace: default 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache-app
  template:
    metadata:
      labels:
        app: apache-app
    spec:
      containers:
      - name: apache-app
        image: nginx
        ports:
        - containerPort: 80 

---
apiVersion: v1 
kind: Service 
metadata:
  name: apache-svc
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: apache-app
