Reno/Terraform/compute/eks/examples/new-poc/K8s/ingress-rules.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata:
  name: poc-ingress-rule
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: nginx 
    
spec:
  rules:
    - host: hostname.verifone.cloud
      http:
        paths:
        - backend:
            service:
              name: hostname-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    - host: apache.verifone.cloud
      http:
        paths:
        - backend:
            service:
              name: apache-svc
              port:
                number: 80
          path: /
          pathType: Prefix
